tests/data/placebo/test_elb_remove_all_security_groups/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "108.56.181.242/32"
                            }
                        ], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-6c7fa917"
                            }
                        ], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-6c7fa917"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "6874f4a2-040b-41eb-8a44-c821f9df5d84", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 19 Dec 2016 14:23:31 GMT"
            }
        }
    }
}
