tests/data/placebo/test_elb_remove_all_security_groups/elasticloadbalancing.ApplySecurityGroupsToLoadBalancer_2.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            "sg-6c7fa917"
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "b975f18c-c5f6-11e6-bda5-93f6cbc8964b", 
            "HTTPHeaders": {
                "x-amzn-requestid": "b975f18c-c5f6-11e6-bda5-93f6cbc8964b", 
                "date": "Mon, 19 Dec 2016 14:23:34 GMT", 
                "content-length": "429", 
                "content-type": "text/xml"
            }
        }
    }
}
